css/caseformat.css
.top {
  color:#BCC6CC;
  font-family: "Garamond","advocate-c43";
  text-decoration: none;
  text-align: center;
}

.top:hover{

}

.title{
  text-align: center;
  font-family: "Garamond", "advocate-c43";
  margin-bottom: 5em;
}

.summary{
  text-align: center;
  margin-bottom: 10em;
}

.for{
  /*display:inline;
  text-align: left;
  margin-left: 15em;*/
}

.against{
  /*display:inline;
  text-align: right;
  margin-left: 60em;*/
}

.ques{
  margin-top: 10em;
  display: block;
  text-align:center;
}



.btns{
  text-align: center;
  border-radius: 2px;
  border:0px;

}

.btns.btn-primary{}

.jumbotron{

}

